syntax = "proto3";

option java_package = "com.demo.grpc";

service user {
  rpc registerUser(RegisterNewUser) returns (APIRes);
  rpc loginUser(LoginExistingUser) returns (APIRes);
  rpc setProfile(SetProfileInfo) returns (APIRes);
  rpc userProfileView(ProfileReq) returns (ProfileView);
  rpc updateProfile(UpdateProfileInfo) returns (APIRes); 
}

message RegisterNewUser {
  string username = 1;
  string password = 2;
}

message LoginExistingUser {
  string username = 1;
  string password = 2;
}

message SetProfileInfo {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string city = 5;
}

message ProfileReq {
  string username = 1;
}

message ProfileView {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string city = 5;
}

message UpdateProfileInfo {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string city = 5;
}

message APIRes {
  int32 responseStatus = 1;
  string responseMessage = 2;
}

message Void {

}